<resources>
    <string name="app_name">Yucata Envoy</string>
    <string name="mitem_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="mitem_about">About</string>
    <string name="title_activity_about">About Yucata Envoy</string>
    <string name="mitem_diagnostic">Diagnostic</string>
    <string name="title_activity_diagnostic">Diagnostic</string>
    <string name="title_activity_gamelist">Game List</string>

    <string name="about_lic_text">Version %1$s&lt;p&gt;\nThis app is released under the &lt;a href=\"https://www.gnu.org/licenses/agpl-3.0.html\"&gt;AGPL-3.0&lt;/a&gt; license.&lt;p&gt;\nThe source code is available &lt;a href=\"https://github.com/ka-ba/yucata.envoy\"&gt;here&lt;/a&gt;. Contributions are welcome, but get in touch with the author <u>before</u> you invest hours.&lt;br&gt;\nThere, under \"issues\", you may also leave bug reports and feature requests. Please be as precise as possible; e.g. by including the information from die Diagnostic screen, your android version\nand a description of what you did, what happened and what behaviour you expected instead .&lt;p&gt;\nThe author developed this app because he wanted to have its functionality. It is released with the hope that its useful to other players on &lt;a href=\"http://www.yucata.de\"&gt;Yucata&lt;/a&gt;.\nA very big \"thank you\" goes to the Yucata-team for developing and maintaining this wonderful gaming site.&lt;p&gt;\n<b>Currently this is a pre-release version.</b></string>

    <string name="waiting_games">Games waiting</string>
    <string name="total_games">Games total</string>
    <string name="pers_invites">Personal invitations</string>
    <string name="button_reload">Reload</string>
    <string name="button_reload_disabled">no reload</string>

    <string name="username_init_txt">[please configure a username]</string>
    <string name="username_cont_desc">username</string>
    <string name="username_title">Yucata Username</string>
    <string name="noti_title">Fire up Notifications</string>
    <string name="noti_on">notify user</string>
    <string name="noti_off">no notifications</string>
    <string name="noti_waiting_sin">%1$d game waiting for your move</string>
    <string name="noti_waiting_plu">%1$d games waiting for your move</string>
    <string name="noti_total_sin">out of %1$d games in total</string>
    <string name="noti_total_plu">out of %1$d games in total</string>
    <!-- string name="e_strpreftoint">cannot parse to int: %s (%s) using default: %d</string -->
    <string name="password_set">Password set</string>
    <string name="password_nopw">Pasword not specified</string>
    <string name="password_title">Yucata Password</string>
    <string name="interval_title">Automatic reload interval</string>
    <string name="interval_no">no automatic reload</string>
    <string name="interval_set">Interval set to %1$s</string>
    <string name="hint_username">please configure a username</string>
    <string name="hint_password">please configure a password</string>
    <string name="accepted">(accepted)</string>
    <string name="rejected">(rejected)</string>
    <string name="login_failed">(login failed)</string>

    <string name="polling_intervals_never">never</string>
    <string name="polling_intervals_15">15 minutes</string>
    <string name="polling_intervals_30">30 minutes</string>
    <string name="polling_intervals_45">45 minutes</string>
    <string name="polling_intervals_60">1 hour</string>
    <string name="polling_intervals_120">2 hours</string>
    <string name="polling_intervals_480">8 hours</string>
    <string name="polling_intervals_720">12 hours</string>
    <string name="polling_intervals_1440">24 hours</string>

    <string name="s_missing_login_info">incomplete login information</string>
    <string name="s_login_failed">login failed</string>
    <string name="s_password_rejected">password rejected</string>
    <string name="s_network_failed">couldn\'t connect to server</string>
    <string name="s_no_service">no background service</string>

    <string name="e_obtainingsession">error obtaining session</string>
    <string name="e_loadinginfo2">could not load game information (%1$d)</string>
    <string name="e_loadinginfo">could not load games info</string>
    <string name="e_parsingjson">could not parse json result</string>

    <!-- technical items: keys -->
    <string name="k_pref_username" translatable="false">username</string>
    <string name="k_pref_password" translatable="false">secret</string>
    <string name="k_pref_have_service" translatable="false">have_data_service</string>
    <string name="k_pref_interval_min" translatable="false">interval_minutes</string>
    <string name="k_pref_notifications" translatable="false">fire_notifications</string>

    <string name="polling_intervals_minutes_never" translatable="false">999999</string>
    <string name="polling_intervals_minutes_15" translatable="false">15</string>
    <string name="polling_intervals_minutes_30" translatable="false">30</string>
    <string name="polling_intervals_minutes_45" translatable="false">45</string>
    <string name="polling_intervals_minutes_60" translatable="false">60</string>
    <string name="polling_intervals_minutes_120" translatable="false">120</string>
    <string name="polling_intervals_minutes_480" translatable="false">480</string>
    <string name="polling_intervals_minutes_720" translatable="false">720</string>
    <string name="polling_intervals_minutes_1440" translatable="false">1440</string>
</resources>
