<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/k_pref_username"
        android:singleLine="true"
        android:title="@string/username_title" />
    <EditTextPreference
        android:editable="true"
        android:inputType="text|textNoSuggestions|textVisiblePassword"
        android:key="@string/k_pref_password"
        android:singleLine="true"
        android:title="@string/password_title" />
    <ListPreference
        android:defaultValue="60"
        android:entries="@array/polling_intervals"
        android:entryValues="@array/polling_intervals_minutes"
        android:key="@string/k_pref_interval_min"
        android:title="@string/interval_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/k_pref_notifications"
        android:summaryOn="@string/noti_on"
        android:summaryOff="@string/noti_off"
        android:title="@string/noti_title"/>
</PreferenceScreen>