<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kaba.yucata.envoy.GameCountActivity">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="false"
            android:contentDescription="@string/username_cont_desc"
            android:gravity="bottom|center_horizontal"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/username_init_txt"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_yucata_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/ic_launcher" />

        <!-- waiting -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="top|center_horizontal"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/waiting_games"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_num_games_waiting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:gravity="center"
                android:text="X"
                android:textAlignment="center"
                android:textSize="50sp" />
        </LinearLayout> <!-- games waiting -->

        <!-- total -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="top|center_horizontal"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/total_games"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_num_games_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:gravity="center"
                android:text="X"
                android:textAlignment="center"
                android:textSize="50sp" />

        </LinearLayout> <!-- games total -->

        <!-- invites -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="top|center_horizontal"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/pers_invites"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_num_pers_invites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:text="X"
                android:textAlignment="center"
                android:textSize="50sp" />

        </LinearLayout> <!-- personal invitations -->

        <Button
            android:id="@+id/b_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/button_reload"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:gravity="top|center_horizontal"
            android:lines="1"
            android:maxLines="1"
            android:text=""
            android:textAlignment="center"
            android:textSize="18sp"
            android:visibility="invisible" />

    </LinearLayout> <!-- all normal content -->

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:visibility="gone"
        android:text=""
        android:textSize="18sp" />

</FrameLayout>
